refactor: update project references

--- a/src/data/projects/ace-ex-ui.mdx
+++ b/src/data/projects/ace-ex-ui.mdx
@@ -1,9 +1,9 @@
 ---
 title: "AceEx UI"
 description: Construction of a design system. AceEx's design system for the web.
-githubUrl: https://github.com/dkshs/ace-ex-ui
+githubUrl: https://github.com/ncontiero/ace-ex-ui
 siteUrl: https://ace-ex-ui.vercel.app/
-lastModified: "2025-01-21"
+lastModified: "2025-03-31"
 ---
 
 AceEx is a web design system that aims to make it easier to develop consistent, accessible, and responsive interfaces. The system comprises a collection of reusable, standardized and documented components that follow the brand's design principles.
@@ -26,4 +26,4 @@ Here are some useful links to get started with AceEx UI:
 - **[@ace-ex/tokens](https://www.npmjs.com/package/@ace-ex/tokens)** — visual primitives such as typography, color, and spacing
 - **[@ace-ex/eslint-config](https://www.npmjs.com/package/@ace-ex/eslint-config)** — Eslint configurations
 - **[@ace-ex/ts-config](https://www.npmjs.com/package/@ace-ex/ts-config)** — TypeScript settings.
-- **[@ace-ex/ace-template](https://github.com/dkshs/ace-ex-ui/tree/main/packages/ace-template)** — initialize a new Next.js app with AceEx UI.
+- **[@ace-ex/ace-template](https://github.com/ncontiero/ace-ex-ui/tree/main/packages/ace-template)** — initialize a new Next.js app with AceEx UI.
