--- a/src/data/projects/dk-tube.mdx
+++ b/src/data/projects/dk-tube.mdx
@@ -1,9 +1,9 @@
 ---
 title: "DkTube"
 description: A YouTube clone project.
-githubUrl: https://github.com/dkshs/dk-tube
-siteUrl: https://dktube.vercel.app
-lastModified: "2025-01-21"
+githubUrl: https://github.com/ncontiero/dk-tube
+siteUrl: https://tube.ncontiero.com
+lastModified: "2025-03-31"
 ---
 
 DkTube is a project that aims to recreate the functionality and interface of Youtube.
@@ -29,7 +29,7 @@ Do you use `nvm`? Then you can run `nvm install` in the project folder to instal
 ### Get the repository
 
 ```bash
-git clone https://github.com/dkshs/dk-tube.git
+git clone https://github.com/ncontiero/dk-tube.git
 ```
 
 ### Local Dependencies
@@ -42,7 +42,7 @@ npm install
 
 ### Environment variables
 
-Create a `.env` file similar to [`.env.example`](https://github.com/dkshs/dk-tube/blob/master/.env.example).
+Create a `.env` file similar to [`.env.example`](https://github.com/ncontiero/dk-tube/blob/master/.env.example).
 
 Change [Clerk](https://dashboard.clerk.com/) variables according to your project.
 
