--- a/src/data/projects/dkblog.mdx
+++ b/src/data/projects/dkblog.mdx
@@ -1,9 +1,9 @@
 ---
 title: "DkBlog"
 description: A dynamic blog using markdown with Next.Js.
-githubUrl: https://github.com/dkshs/dkblog
-siteUrl: https://blog.dkshs.me
-lastModified: "2025-01-21"
+githubUrl: https://github.com/ncontiero/dkblog
+siteUrl: https://blog.ncontiero.com
+lastModified: "2025-03-32"
 ---
 
 DkBlog is a project using [Next.Js](https://nextjs.org/) to create a dynamic blog with [markdown](https://www.markdownguide.org/).
@@ -28,7 +28,7 @@ Do you use `nvm`? Then you can run `nvm install` in the project folder to instal
 ### Get the repository
 
 ```bash
-git clone https://github.com/dkshs/dkblog.git
+git clone https://github.com/ncontiero/dkblog.git
 ```
 
 ### Local Dependencies
@@ -41,7 +41,7 @@ pnpm install
 
 ### Environment variables
 
-Create a `.env` file similar to [`.env.example`](https://github.com/dkshs/dkblog/blob/master/.env.example).
+Create a `.env` file similar to [`.env.example`](https://github.com/ncontiero/dkblog/blob/master/.env.example).
 
 Change [Clerk](https://dashboard.clerk.com/) variables according to your project.
 
@@ -75,4 +75,4 @@ pnpm run dev
 
 ## License
 
-This project is licensed under the **MIT** License - see the [LICENSE](https://github.com/dkshs/dkblog/blob/master/LICENSE) file for details
+This project is licensed under the **MIT** License - see the [LICENSE](https://github.com/ncontiero/dkblog/blob/master/LICENSE) file for details
