--- a/src/data/projects/dkcutter-django.mdx
+++ b/src/data/projects/dkcutter-django.mdx
@@ -1,49 +1,49 @@
 ---
 title: "DKCutter Django"
 description: DKCutter Django is a framework for jumpstarting production-ready Django projects quickly.
-githubUrl: https://github.com/dkshs/dkcutter-django
-lastModified: "2025-02-05"
+githubUrl: https://github.com/ncontiero/dkcutter-django
+lastModified: "2025-03-31"
 ---
 
-[![Build Status](https://img.shields.io/github/actions/workflow/status/dkshs/dkcutter-django/ci.yml?branch=main)](https://github.com/dkshs/dkcutter-django/actions/workflows/ci.yml?query=branch%3Amain)
-[![license mit](https://img.shields.io/badge/licence-MIT-56BEB8)](https://github.com/dkshs/dkcutter-django/blob/main/LICENSE)
+[![Build Status](https://img.shields.io/github/actions/workflow/status/ncontiero/dkcutter-django/ci.yml?branch=main)](https://github.com/ncontiero/dkcutter-django/actions/workflows/ci.yml?query=branch%3Amain)
+[![license mit](https://img.shields.io/badge/licence-MIT-56BEB8)](https://github.com/ncontiero/dkcutter-django/blob/main/LICENSE)
 [![Code style: Ruff](https://img.shields.io/endpoint?url=https://raw.githubusercontent.com/astral-sh/ruff/main/assets/badge/format.json)](https://github.com/astral-sh/ruff)
 
-Powered by [DKCutter](https://github.com/dkshs/dkcutter), DKCutter Django is a framework for jumpstarting production-ready Django projects quickly.
+Powered by [DKCutter](https://github.com/ncontiero/dkcutter), DKCutter Django is a framework for jumpstarting production-ready Django projects quickly.
 
-- If you have problems with DKCutter Django, please open [issues](https://github.com/dkshs/dkcutter-django/issues/new).
+- If you have problems with DKCutter Django, please open [issues](https://github.com/ncontiero/dkcutter-django/issues/new).
 
 ## Usage
 
-To scaffold an application using [dkcutter](https://github.com/dkshs/dkcutter), run any of the following four commands and answer the command prompt questions:
+To scaffold an application using [dkcutter](https://github.com/ncontiero/dkcutter), run any of the following four commands and answer the command prompt questions:
 
 ### npm
 
 ```bash
-npx dkcutter@latest gh:dkshs/dkcutter-django
+npx dkcutter@latest gh:ncontiero/dkcutter-django
 ```
 
 ### yarn
 
 ```bash
-yarn dlx dkcutter@latest gh:dkshs/dkcutter-django
+yarn dlx dkcutter@latest gh:ncontiero/dkcutter-django
 ```
 
 ### pnpm
 
 ```bash
-pnpm dlx dkcutter@latest gh:dkshs/dkcutter-django
+pnpm dlx dkcutter@latest gh:ncontiero/dkcutter-django
 ```
 
 ### bun
 
 ```bash
-bunx dkcutter@latest gh:dkshs/dkcutter-django
+bunx dkcutter@latest gh:ncontiero/dkcutter-django
 ```
 
 You'll be prompted for some values. Provide them, then a Django project will be created for you.
 
-**Warning**: After this point, change 'DKSHS', etc to your own information.
+**Warning**: After this point, change 'Nicolas Contiero', etc to your own information.
 
 Answer the prompts with your own desired [options][options-url]. For example:
 
@@ -75,6 +75,7 @@ If you want to start faster, you can use the following options:
 | `--restFramework <string>`        | Select a REST API framework.                                                              |
 | `--mailService <string>`          | Select an email service that Django-Anymail provides.                                     |
 | `--frontendPipeline <string>`     | Select a pipeline to compile and optimize frontend assets (JS, CSS, …).                   |
+| `--frontendPipelineLang <string>` | Select the language used by the Frontend Pipeline.                                        |
 | `--additionalTools <string>`      | Select additional tools to use.                                                           |
 | `--automatedDepsUpdater <string>` | Choose Automated Dependency Updater. [See for more info][options-url].                    |
 
@@ -85,22 +86,22 @@ If you want to start faster, you can use the following options:
 The following would be the structure of an application with Sentry:
 
 ```bash
-pnpm dlx dkcutter gh:dkshs/dkcutter-django --additionalTools sentry
+pnpm dlx dkcutter gh:ncontiero/dkcutter-django --additionalTools sentry
 ```
 
 If you want to use all the default values with the exception of one or more, you can do it as follows:
 
 ```bash
-pnpm dlx dkcutter gh:dkshs/dkcutter-django --additionalTools celery,sentry -y
+pnpm dlx dkcutter gh:ncontiero/dkcutter-django --additionalTools celery,sentry -y
 ```
 
 This will use the default values except for `--additionalTools`.
 
 ## For local development, see the following
 
-- [Developing locally using docker](https://github.com/dkshs/dkcutter-django/blob/main/docs/developing-locally-docker.md)
+- [Developing locally using docker](https://github.com/ncontiero/dkcutter-django/blob/main/docs/developing-locally-docker.md)
 
-[options-url]: https://github.com/dkshs/dkcutter-django/blob/main/docs/project-generation-options.md
+[options-url]: https://github.com/ncontiero/dkcutter-django/blob/main/docs/project-generation-options.md
 
 ## References and inspirations
 
@@ -108,4 +109,4 @@ This will use the default values except for `--additionalTools`.
 
 ## License
 
-This project is licensed under the **MIT** License - see the [LICENSE](https://github.com/dkshs/dkcutter-django/blob/main/LICENSE) file for details
+This project is licensed under the **MIT** License - see the [LICENSE](https://github.com/ncontiero/dkcutter-django/blob/main/LICENSE) file for details
