--- a/src/data/projects/dkcutter.mdx
+++ b/src/data/projects/dkcutter.mdx
@@ -1,14 +1,14 @@
 ---
 title: "DKCutter"
 description: A command-line utility that creates projects from templates.
-githubUrl: https://github.com/dkshs/dkcutter
-siteUrl: https://dkcutter.dkshs.me
-lastModified: "2025-01-21"
+githubUrl: https://github.com/ncontiero/dkcutter
+siteUrl: https://dkcutter.ncontiero.com
+lastModified: "2025-03-31"
 ---
 
 DKCutter makes it easy to create projects through templates.
 
-[![license mit](https://img.shields.io/badge/licence-MIT-7c3aed)](https://github.com/dkshs/dkcutter/blob/main/LICENSE)
+[![license mit](https://img.shields.io/badge/licence-MIT-7c3aed)](https://github.com/ncontiero/dkcutter/blob/main/LICENSE)
 [![NPM version][npm-image]][npm-url]
 
 [npm-url]: https://www.npmjs.com/package/dkcutter
@@ -16,7 +16,7 @@ DKCutter makes it easy to create projects through templates.
 
 ## Getting Started
 
-Go to the [Quick Start](https://dkcutter.dkshs.me/guide/start/getting-started) to get started.
+Go to the [Quick Start](https://dkcutter.ncontiero.com/guide/start/getting-started) to get started.
 
 ## References and inspirations
 
@@ -24,4 +24,4 @@ Go to the [Quick Start](https://dkcutter.dkshs.me/guide/start/getting-started) t
 
 ## License
 
-This project is licensed under the **MIT** License - see the [LICENSE](https://github.com/dkshs/dkcutter/blob/main/LICENSE) file for details
+This project is licensed under the **MIT** License - see the [LICENSE](https://github.com/ncontiero/dkcutter/blob/main/LICENSE) file for details
