--- a/src/data/projects/video-ambilight.mdx
+++ b/src/data/projects/video-ambilight.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Video Ambilight"
 description: 🌈 Ambilight Effect - React - Next.js (YouTube iframe, Video).
-githubUrl: https://github.com/dkshs/video-ambilight
-siteUrl: https://dkshs.github.io/video-ambilight/
+githubUrl: https://github.com/ncontiero/video-ambilight
+siteUrl: https://ncontiero.github.io/video-ambilight/
 image: /projects/video-ambilight.png # file in the `/public` folder
 lastModified: "2025-01-21"
 ---
 
-[![Project preview](/projects/video-ambilight.png)](https://dkshs.github.io/video-ambilight/)
+[![Project preview](/projects/video-ambilight.png)](https://ncontiero.github.io/video-ambilight/)
 
 Project using [YouTube iframe API](https://developers.google.com/youtube/iframe_api_reference) in HTML and [`react-player`](https://github.com/CookPete/react-player) with React and NextJs to make an ambient light effect.
 
