--- a/src/data/projects/dkcutter-nextjs.mdx
+++ b/src/data/projects/dkcutter-nextjs.mdx
@@ -1,40 +1,40 @@
 ---
 title: "DKCutter NextJs"
 description: DKCutter NextJs is a framework for quickly starting Next.Js projects.
-githubUrl: https://github.com/dkshs/dkcutter-nextjs
-lastModified: "2024-09-22"
+githubUrl: https://github.com/ncontiero/dkcutter-nextjs
+lastModified: "2025-03-31"
 ---
 
-Powered by [DKCutter](https://github.com/dkshs/dkcutter), DKCutter NextJs is a framework for quickly starting Next.Js projects.
+Powered by [DKCutter](https://github.com/ncontiero/dkcutter), DKCutter NextJs is a framework for quickly starting Next.Js projects.
 
-- If you have problems with DKCutter NextJs, please open [issues](https://github.com/dkshs/dkcutter-nextjs/issues/new).
+- If you have problems with DKCutter NextJs, please open [issues](https://github.com/ncontiero/dkcutter-nextjs/issues/new).
 
 ## Usage
 
-To scaffold an application using [dkcutter](https://github.com/dkshs/dkcutter), run any of the following four commands and answer the command prompt questions:
+To scaffold an application using [dkcutter](https://github.com/ncontiero/dkcutter), run any of the following four commands and answer the command prompt questions:
 
 ### npm
 
 ```bash
-npx dkcutter gh:dkshs/dkcutter-nextjs.git
+npx dkcutter gh:ncontiero/dkcutter-nextjs.git
 ```
 
 ### yarn
 
 ```bash
-yarn dlx dkcutter gh:dkshs/dkcutter-nextjs.git
+yarn dlx dkcutter gh:ncontiero/dkcutter-nextjs.git
 ```
 
 ### pnpm
 
 ```bash
-pnpm dlx dkcutter gh:dkshs/dkcutter-nextjs.git
+pnpm dlx dkcutter gh:ncontiero/dkcutter-nextjs.git
 ```
 
 ### bun
 
 ```bash
-bunx dkcutter@latest gh:dkshs/dkcutter-nextjs.git
+bunx dkcutter@latest gh:ncontiero/dkcutter-nextjs.git
 ```
 
 You'll be prompted for some values. Provide them, then a Next.Js project will be created for you.
@@ -47,7 +47,7 @@ Answer the prompts with your own desired [options][options-url]. For example:
 ✔ What is the project name? … My Awesome Project
 ✔ What is the project slug? … my-awesome-project
 ✔ What is the project description? … Behold My Awesome Project!
-✔ What is the author name? … DKSHS
+✔ What is the author name? … Nicolas Contiero
 ✔ What is the project version? … 0.1.0
 ✔ Do you want to use linters? … No / Yes
 ✔ Do you want to use husky? … No / Yes
@@ -98,19 +98,19 @@ If you want to start faster, you can use the following options:
 The following would be the structure of an application with [Commitlint](https://commitlint.js.org/):
 
 ```bash
-pnpm dlx dkcutter https://github.com/dkshs/dkcutter-nextjs.git --useCommitlint
+pnpm dlx dkcutter https://github.com/ncontiero/dkcutter-nextjs.git --useCommitlint
 ```
 
 If you want to use all the default values with the exception of one or more, you can do it as follows:
 
 ```bash
-pnpm dlx dkcutter https://github.com/dkshs/dkcutter-nextjs.git --useHusky --useLintStaged -y
+pnpm dlx dkcutter https://github.com/ncontiero/dkcutter-nextjs.git --useHusky --useLintStaged -y
 ```
 
 This will use the default values, with the exception of the `--useHusky` and `--useLintStaged` options.
 
 ---
 
-See more information in the github repo: [dkshs/dkcutter-nextjs](https://github.com/dkshs/dkcutter-nextjs).
+See more information in the github repo: [ncontiero/dkcutter-nextjs](https://github.com/ncontiero/dkcutter-nextjs).
 
-[options-url]: https://github.com/dkshs/dkcutter-nextjs/blob/main/docs/project-generation-options.md
+[options-url]: https://github.com/ncontiero/dkcutter-nextjs/blob/main/docs/project-generation-options.md
