--- a/src/data/projects/ncontiero.com.mdx
+++ b/src/data/projects/ncontiero.com.mdx
@@ -1,7 +1,7 @@
 ---
 title: "ncontiero.com"
 description: My personal website (The website you're looking at).
-githubUrl: https://github.com/dkshs/ncontiero.com
+githubUrl: https://github.com/ncontiero/ncontiero.com
 siteUrl: https://ncontiero.com/
 image: /projects/ncontiero.com.png # file in the `/public` folder
 lastModified: "2025-03-31"
@@ -9,4 +9,4 @@ lastModified: "2025-03-31"
 
 [![Project preview](/projects/ncontiero.com.png)](https://ncontiero.com/)
 
-If you like the design, check out the [Repository on GitHub](https://github.com/dkshs/ncontiero.com).
+If you like the design, check out the [Repository on GitHub](https://github.com/ncontiero/ncontiero.com).
